--- a/index.html
+++ b/index.html
@@ -160,28 +160,28 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/images/profile-2.jpeg" alt="">
+                        <img src="images/profile-2.jpeg" alt="">
                         <div class="text">Someone name</div>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/images/profile-3.jpeg" alt="">
+                        <img src="images/profile-3.jpeg" alt="">
                         <div class="text">Someone name</div>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/images/profile-4.jpeg" alt="">
+                        <img src="images/profile-4.jpeg" alt="">
                         <div class="text">Someone name</div>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/images/profile-5.jpeg" alt="">
+                        <img src="images/profile-5.jpeg" alt="">
                         <div class="text">Someone name</div>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
@@ -253,6 +253,6 @@
     <footer>
         <span>Created By <a href="jmportafolio.herokuapp.com">Javier Maranda</a> | <span class="far fa-copyright"></span>2021 All rights reserved</span>
     </footer>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
