--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="/images/profile-1.jpeg" alt="">
+                    <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I´m Gerard and I´m a <span class=".typing-2"></span></div>
@@ -153,7 +153,7 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="/images/profile-1.jpeg" alt="">
+                        <img src="images/profile-1.jpeg" alt="">
                         <div class="text">Someone name</div>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
