--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Gerard Rupert</div>
-                <div class="text-3">And I´am a <span class=".typing"></span></div>
+                <div class="text-3">And I´am a <span class=".typing">Developer</span></div>
                 <a href="#">Hire me</a>
             </div> 
         </div>
@@ -56,7 +56,7 @@
                     <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I´m Gerard and I´m a <span class=".typing-2"></span></div>
+                    <div class="text">I´m Gerard and I´m a <span class=".typing-2">Developer</span></div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, dignissimos. Praesentium blanditiis ex exercitationem minus dignissimos, asperiores natus numquam placeat alias at nam dolore id est, beatae itaque? Tempore error enim dolore, impedit necessitatibus temporibus qui distinctio deleniti laudantium molestias delectus ratione deserunt omnis in accusantium dolorum eveniet rem quas repellat reiciendis corrupti. Vitae totam explicabo quas porro aut quidem.</p>
                     <a href="#">Download CV</a>
                 </div>
