--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
     <!--footer section start-->
     <footer>
-        <span>Created By <a href="jmportafolio.herokuapp.com">Javier Maranda</a> | <span class="far fa-copyright"></span>2021 All rights reserved</span>
+        <span>Created By <a href="https://jmportafolio.herokuapp.com/">Javier Maranda</a> | <span class="far fa-copyright"></span>2021 All rights reserved</span>
     </footer>
 <script src="js/script.js"></script>
 </body>
