--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#">JM Portfo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#teams">Teams</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home">Inicio</a></li>
+                <li><a href="#about">Sobre mi</a></li>
+                <li><a href="#services">Lenguajes</a></li>
+                <li><a href="#skills">Librerías y Frameworks</a></li>
+                <li><a href="#teams">Proyectos</a></li>
+                <li><a href="#contact">Contacto</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -38,110 +38,113 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Gerard Rupert</div>
-                <div class="text-3">And I´am a <span class=".typing">Developer</span></div>
-                <a href="#">Hire me</a>
+                <div class="text-1">Hola, mi nombre es</div>
+                <div class="text-2">Javier Maranda</div>
+                <div class="text-3">Y soy <span class=".typing">Desarrollador Frontend Jr.</span></div>
+                <a href="#about">Mas info</a>
             </div> 
         </div>
     </section>
 
-    <!--about section start-->
+    <!--SOBRE MI-->
 
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About me</h2>
+            <h2 class="title">Sobre mi</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/profile-1.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I´m Gerard and I´m a <span class=".typing-2">Developer</span></div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, dignissimos. Praesentium blanditiis ex exercitationem minus dignissimos, asperiores natus numquam placeat alias at nam dolore id est, beatae itaque? Tempore error enim dolore, impedit necessitatibus temporibus qui distinctio deleniti laudantium molestias delectus ratione deserunt omnis in accusantium dolorum eveniet rem quas repellat reiciendis corrupti. Vitae totam explicabo quas porro aut quidem.</p>
-                    <a href="#">Download CV</a>
+                    <div class="text">Bienvenidx a mi <span class=".typing-2">Portfolio</span></div>
+                    <p>Creo sitios web responsive utilizando diferentes tecnologías. Soy una persona flexible, de buena comunicación, servicial y de buena predisposición. Me gusta la música, viajar, leer, asistir a reuniones. También me gusta sentarme en la compu a crear soluciones (mientras que escucho música ¡claro!)<br>
+                        Estoy en busqueda de mi primer empleo en el rubro IT, para el puesto de Frontend Jr.
+                        Tengo 26 años, cuento con disponibilidad horaria full-time, para trabajo remoto, 
+                        o presencial en Buenos Aires. </p>
+                    <a href="#">Descargar CV</a>
                 </div>
             </div> 
         </div>
     </section>
 
-    <!--services section start-->
+    <!--LENGUAJES-->
 
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My services</h2>
+            <h2 class="title">Lenguajes que más utilizo</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ratione officiis ipsa nulla nesciunt blanditiis.</p>
+                        <i class="fab fa-html5"></i>
+                        <div class="text">HTML</div>
+                        <p>Para crear la estructura de tu sitio web; enlaces, imágenes, etc.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ratione officiis ipsa nulla nesciunt blanditiis.</p>
+                        <i class="fab fa-css3-alt"></i>
+                        <div class="text">CSS</div>
+                        <p>Para darle personalidad a tus sitios, con diseños y colores seleccionados.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ratione officiis ipsa nulla nesciunt blanditiis.</p>
+                        <i class="fab fa-js"></i>
+                        <div class="text">JavaScript</div>
+                        <p>Para darle vida a tu sitio generando interacciones con el usuario.</p>
                     </div>
                 </div>
             </div> 
         </div>
     </section>
 
-    <!--skills section start-->
+    <!--LIBRERÍAS-->
     <section class="skills" id="skills">
        <div class="max-width">
-           <h2 class="title">My skills</h2>
+           <h2 class="title">Librerías y Frameworks</h2>
            <div class="skills-content">
+               
                <div class="column left">
-                   <div class="text">My creative skills & experiences.</div>
-                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum doloribus distinctio cumque quae possimus nihil tempora veritatis repellendus? Voluptatem, repudiandae? Expedita beatae minus veniam maxime doloribus error excepturi nisi culpa dolor illum, magni, suscipit perspiciatis delectus. A voluptatibus hic consectetur odio dolores voluptas perspiciatis, sit, adipisci asperiores culpa commodi? Aspernatur eos optio provident illo culpa deleniti quo, corporis expedita sunt.</p>
-                   <a href="#">Read more</a>
-               </div>
-               <div class="column right">
                    <div class="bars">
                         <div class="info">
-                            <span>HTML</span>
+                            <span>Bootstrap</span>
                             <span>90%</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>CSS</span>
-                            <span>70%</span>
+                            <span>Grid y Flexbox</span>
+                            <span>90%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>JavaScript</span>
-                            <span>80%</span>
+                            <span>React</span>
+                            <span>40%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>PHP</span>
-                            <span>40%</span>
+                            <span>NodeJs</span>
+                            <span>60%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>MySQL</span>
+                            <span>Express</span>
                             <span>60%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
                </div>
+               <div class="column right">
+                <div class="text">Habilidades blandas</div>
+                 <p>Soy buen compañero, me gusta colaborar en la inclusión de aquellas personas a quienes les cuesta la interacción (no soy tímido para nada) mantengo un ego moderado y un trato sumamente respetuoso. Una de las cualidades que me gusta resaltar, es la capacidad de auto-educarme; todo lo que aprendí lo hice de manera autodidacta. Tengo el hábido de estudiar para mantenerme actualizado, estar al tanto de las nuevas tecnologías y para mejorar mi prácticas como desarrollador.</p>
+            </div>
            </div>
        </div>
     </section>
@@ -149,41 +152,46 @@
     <!-- teams section start-->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">My teams</h2>
+            <h2 class="title">Proyectos</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/LaEsquina.jpg" alt="">
+                        <div class="text">Remisería<br>La Esquina</div>
+                        <p>Primer sitio que hice, realizado en HTML y CSS</p>
+                        <a href="https://remiseslaesquina.herokuapp.com/" target="_blank">Ver sitio</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="images/DarkMode.jpg" alt="">
+                        <div class="text">Implementando<br>Dark Mode</div>
+                        <p>Sitio desktop con modo nocturno<br>JavaScript y SASS</p>
+                        <a href="https://jmdarkmode.herokuapp.com/" target="_blank">Ver sitio</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="/images/Node firstsite.jpg" alt="">
+                        <div class="text">Primer proyecto con Node Js</div>
+                        <p>Es un sitio básico de portafolio que solicita funciones a Node</p>
+                        <a href="" target="_blank">Proximamente</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Proyecto<br> 4</div>
+                        <p>Aún no disponible</p>
+                        <a href="" target="_blank">Proximamente</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Proyecto<br> 5</div>
+                        <p>Aún no disponible</p>
+                        <a href="" target="_blank">Proximamente</a>
                     </div>
                 </div>
             </div>
@@ -191,26 +199,26 @@
     </section>
     
 
-    <!--contact section start-->
+    <!--CONTACTO-->
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Contact me</h2>
+            <h2 class="title">Contacto</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <div class="text">Get in Touch</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ut ducimus possimus cupiditate cumque pariatur aliquid? Molestias fugit ipsa laudantium!</p>
+                    <div class="text">Contacto</div>
+                    <p>Si deseas que trabajemos juntos en algún proyecto, o quieres hacerme una sugerencia sobre mi portfolio ¡envíame un mail! lo responderé a la brevedad. </p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
-                                <div class="head">Name</div>
-                                <div class="sub-title">Gerard Nomeacuerdo</div>
+                                <div class="head">Nombre</div>
+                                <div class="sub-title">Javier Maranda</div>
                             </div>    
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
-                                <div class="head">Address</div>
+                                <div class="head">Ubicación actual</div>
                                 <div class="sub-title">Buenos Aires, AR</div>
                             </div>    
                         </div>
@@ -218,30 +226,30 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">gerardgerardin@gmail.com</div>
+                                <div class="sub-title">marandajavier@gmail.com</div>
                             </div>    
                         </div>
                     </div>
                 </div>
                 <div class="column right">
-                    <div class="text">Message me</div>
+                    <div class="text">Envíame un mensaje</div>
                     <form action="#">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" placeholder="Nombre" required>
                             </div>
                             <div class="field name">
                                 <input type="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" placeholder="Asunto del mensaje" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Describe proyect.." required></textarea>
+                            <textarea cols="30" rows="10" placeholder="Describe tu proyecto..." required></textarea>
                         </div>
                         <div class="button">
-                            <button type="submit">Send message</button>
+                            <button type="submit">Enviar mensaje</button>
                         </div>
                     </form>
                 </div>
@@ -249,9 +257,9 @@
         </div>
     </section>
 
-    <!--footer section start-->
+    <!--FOOTER-->
     <footer>
-        <span>Created By <a href="https://jmportafolio.herokuapp.com/">Javier Maranda</a> | <span class="far fa-copyright"></span>2021 All rights reserved</span>
+        <span>Sitio creado por <a href="https://jmportafolio.herokuapp.com/">Javier Maranda</a> | <span class="far fa-copyright"></span>2021 Todos los derechos reservados</span>
     </footer>
 <script src="js/script.js"></script>
 </body>
