--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Personal portfolio by JM</title>
+    <title>Portfolio de Javier Maranda</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
@@ -34,7 +34,7 @@
         </div>
     </nav>
 
-    <!--home section start-->
+    <!--HOME-->
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
@@ -61,7 +61,7 @@
                         Estoy en busqueda de mi primer empleo en el rubro IT, para el puesto de Frontend Jr.
                         Tengo 26 años, cuento con disponibilidad horaria full-time, para trabajo remoto, 
                         o presencial en Buenos Aires. </p>
-                    <a href="#">Descargar CV</a>
+                    <a href="/JavierMarandaCV.pdf" target="_blank">Descargar CV</a>
                 </div>
             </div> 
         </div>
@@ -69,10 +69,10 @@
 
     <!--LENGUAJES-->
 
-    <section class="services" id="services">
+    <section class="languages" id="languages">
         <div class="max-width">
             <h2 class="title">Lenguajes que más utilizo</h2>
-            <div class="serv-content">
+            <div class="lang-content">
                 <div class="card">
                     <div class="box">
                         <i class="fab fa-html5"></i>
@@ -108,49 +108,49 @@
                    <div class="bars">
                         <div class="info">
                             <span>Bootstrap</span>
-                            <span>90%</span>
+                            <span>100%</span>
                         </div>
-                        <div class="line html"></div>
+                        <div class="line bootstrap"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Grid y Flexbox</span>
-                            <span>90%</span>
+                            <span>100%</span>
                         </div>
-                        <div class="line css"></div>
+                        <div class="line grid-flexbox"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>React</span>
-                            <span>40%</span>
+                            <span>100%</span>
                         </div>
-                        <div class="line js"></div>
+                        <div class="line react"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>NodeJs</span>
-                            <span>60%</span>
+                            <span>100%</span>
                         </div>
-                        <div class="line php"></div>
+                        <div class="line nodejs"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Express</span>
-                            <span>60%</span>
+                            <span>100%</span>
                         </div>
-                        <div class="line mysql"></div>
+                        <div class="line express"></div>
                     </div>
                </div>
                <div class="column right">
                 <div class="text">Habilidades blandas</div>
-                 <p>Soy buen compañero, me gusta colaborar en la inclusión de aquellas personas a quienes les cuesta la interacción (no soy tímido para nada) mantengo un ego moderado y un trato sumamente respetuoso. Una de las cualidades que me gusta resaltar, es la capacidad de auto-educarme; todo lo que aprendí lo hice de manera autodidacta. Tengo el hábido de estudiar para mantenerme actualizado, estar al tanto de las nuevas tecnologías y para mejorar mi prácticas como desarrollador.</p>
+                 <p>Mantengo un trato respetuoso y profesional con mis compañerxs, con un ego moderado, abierto a las críticas y sugerencias.<br>Viajé mucho, gracias a eso me adapto muy bien a diferentes entornos y tengo una visión empática más amplia que antes de hacerlo.<br>Tengo la capacidad de auto-educarme; todo lo que aprendí lo hice de manera autodidacta. Participo activamente de diversas comunidades online, donde debatimos, solucionamos problemas y nos mantenemos al tanto de las nuevas tecnologías.<br>Estudio a diario a modo de entrenamiento, para escribir cada día código más claro y funcional. A continuación podrás ver mis proyectos más recientes!</p>
             </div>
            </div>
        </div>
     </section>
 
-    <!-- teams section start-->
-    <section class="teams" id="teams">
+    <!--PROYECTOS RECIENTES-->
+    <section class="proyects" id="proyects">
         <div class="max-width">
             <h2 class="title">Proyectos</h2>
             <div class="carousel owl-carousel">
@@ -172,25 +172,25 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/images/Node firstsite.jpg" alt="">
-                        <div class="text">Primer proyecto con Node Js</div>
-                        <p>Es un sitio básico de portafolio que solicita funciones a Node</p>
-                        <a href="" target="_blank">Proximamente</a>
+                        <img src="images/Mabel.jpg" alt="">
+                        <div class="text">Taller de Costura<br>Mabel</div>
+                        <p>Sitio funcional, realizado<br>en HTML y CSS</p>
+                        <a href="https://javimaranda.github.io/tallercosturamabel/" target="_blank">Ver sitio</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Proyecto<br> 4</div>
-                        <p>Aún no disponible</p>
-                        <a href="" target="_blank">Proximamente</a>
+                        <img src="images/Bootstrap.jpg" alt="">
+                        <div class="text">Practicando con Bootstrap</div>
+                        <p>Sitio web responsive realizado<br>con bootstrap.</p>
+                        <a href="https://jmbootstrapsite.herokuapp.com/" target="_blank">Ver sitio</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Proyecto<br> 5</div>
-                        <p>Aún no disponible</p>
+                        <img src="images/react.png" alt="">
+                        <div class="text">Proyecto con<br>React y NodeJs<br></div>
+                        <p>Proyecto en construcción<br>Aún no está disponible</p>
                         <a href="" target="_blank">Proximamente</a>
                     </div>
                 </div>
