--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <ul class="menu">
                 <li><a href="#home">Inicio</a></li>
                 <li><a href="#about">Sobre mi</a></li>
-                <li><a href="#services">Lenguajes</a></li>
+                <li><a href="#languages">Lenguajes</a></li>
                 <li><a href="#skills">Librerías y Frameworks</a></li>
-                <li><a href="#teams">Proyectos</a></li>
+                <li><a href="#proyects">Proyectos</a></li>
                 <li><a href="#contact">Contacto</a></li>
             </ul>
             <div class="menu-btn">
@@ -114,7 +114,7 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Grid y Flexbox</span>
+                            <span>Jquery</span>
                             <span>100%</span>
                         </div>
                         <div class="line grid-flexbox"></div>
@@ -143,7 +143,7 @@
                </div>
                <div class="column right">
                 <div class="text">Habilidades blandas</div>
-                 <p>Mantengo un trato respetuoso y profesional con mis compañerxs, con un ego moderado, abierto a las críticas y sugerencias.<br>Viajé mucho, gracias a eso me adapto muy bien a diferentes entornos y tengo una visión empática más amplia que antes de hacerlo.<br>Tengo la capacidad de auto-educarme; todo lo que aprendí lo hice de manera autodidacta. Participo activamente de diversas comunidades online, donde debatimos, solucionamos problemas y nos mantenemos al tanto de las nuevas tecnologías.<br>Estudio a diario a modo de entrenamiento, para escribir cada día código más claro y funcional. A continuación podrás ver mis proyectos más recientes!</p>
+                 <p>Mantengo un trato respetuoso y profesional con mis compañerxs, con un ego moderado, abierto a las críticas y a las sugerencias.<br>Viajé mucho, gracias a eso aprendí a adaptarme muy bien a diferentes entornos, desarrollando la empatía y el trato interpersonal.<br>Tengo la capacidad de auto-educarme; casi todo lo que aprendí lo hice de manera autodidacta. Participo activamente de diversas comunidades online, donde debatimos, solucionamos problemas y nos mantenemos al tanto de las nuevas tecnologías.<br>Estudio a diario a modo de entrenamiento, para escribir cada día código más claro y funcional.<br>¡A continuación podrás ver mis proyectos más recientes!</p>
             </div>
            </div>
        </div>
@@ -158,7 +158,7 @@
                     <div class="box">
                         <img src="images/LaEsquina.jpg" alt="">
                         <div class="text">Remisería<br>La Esquina</div>
-                        <p>Primer sitio que hice, realizado en HTML y CSS</p>
+                        <p>Primer sitio que hice,<br>realizado en HTML y CSS</p>
                         <a href="https://remiseslaesquina.herokuapp.com/" target="_blank">Ver sitio</a>
                     </div>
                 </div>
@@ -166,14 +166,14 @@
                     <div class="box">
                         <img src="images/DarkMode.jpg" alt="">
                         <div class="text">Implementando<br>Dark Mode</div>
-                        <p>Sitio desktop con modo nocturno<br>JavaScript y SASS</p>
+                        <p>Sitio desktop, con<br>JavaScript y SASS</p>
                         <a href="https://jmdarkmode.herokuapp.com/" target="_blank">Ver sitio</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/Mabel.jpg" alt="">
-                        <div class="text">Taller de Costura<br>Mabel</div>
+                        <div class="text">Taller de<br>costuras</div>
                         <p>Sitio funcional, realizado<br>en HTML y CSS</p>
                         <a href="https://javimaranda.github.io/tallercosturamabel/" target="_blank">Ver sitio</a>
                     </div>
@@ -181,8 +181,8 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/Bootstrap.jpg" alt="">
-                        <div class="text">Practicando con Bootstrap</div>
-                        <p>Sitio web responsive realizado<br>con bootstrap.</p>
+                        <div class="text">Practicando con<br>Bootstrap</div>
+                        <p>Sitio web<br>One page</p>
                         <a href="https://jmbootstrapsite.herokuapp.com/" target="_blank">Ver sitio</a>
                     </div>
                 </div>
@@ -233,20 +233,20 @@
                 </div>
                 <div class="column right">
                     <div class="text">Envíame un mensaje</div>
-                    <form action="#">
+                    <form action="/enviar.php" method="POST">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Nombre" required>
+                                <input type="text" name="name" placeholder="Nombre" required>
                             </div>
                             <div class="field name">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" name="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Asunto del mensaje" required>
+                            <input type="text" name="subject" placeholder="Asunto del mensaje" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Describe tu proyecto..." required></textarea>
+                            <textarea cols="30" rows="10" name="message" placeholder="Describe tu proyecto..." required></textarea>
                         </div>
                         <div class="button">
                             <button type="submit">Enviar mensaje</button>
@@ -259,7 +259,7 @@
 
     <!--FOOTER-->
     <footer>
-        <span>Sitio creado por <a href="https://jmportafolio.herokuapp.com/">Javier Maranda</a> | <span class="far fa-copyright"></span>2021 Todos los derechos reservados</span>
+        <span>Sitio creado por <a href="https://javimaranda.github.io/JMportfolio/">Javier Maranda</a> | <span class="far fa-copyright"></span>2021 Todos los derechos reservados</span>
     </footer>
 <script src="js/script.js"></script>
 </body>
