corrigiendo enlace cv

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">JM Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="#">JM <span>Portfolio.</span></a></div>
             <ul class="menu">
                 <li><a href="#home">Inicio</a></li>
                 <li><a href="#about">Sobre mi</a></li>
@@ -61,7 +61,7 @@
                         Estoy en busqueda de mi primer empleo en el rubro IT, para el puesto de Frontend Jr.
                         Tengo 26 años, cuento con disponibilidad horaria full-time, para trabajo remoto, 
                         o presencial en Buenos Aires. </p>
-                    <a href="JavierMarandaCV.pdf" target="_blank">Descargar CV</a>
+                    <a href="JavierMaranda-CV.pdf" target="_blank">Descargar CV</a>
                 </div>
             </div> 
         </div>
